update: delete poll get user polls and adjust vote
