# backend/internal/poll/dto/request.go
@@ -12,13 +12,18 @@ type CreatePollRequest struct {
 }
 
 type PatchPollRequest struct {
-	PollName       string    `json:"poll_name"`
-	IsMulti        bool      `json:"is_multi"`
-	DeletedChoices []int     `json:"deleted_choices"`
-	AddedChoices   []string  `json:"added_choices"`
-	UserID         uuid.UUID `json:"-"`
+	PollName       string   `json:"poll_name"`
+	IsMulti        bool     `json:"is_multi"`
+	DeletedChoices []int    `json:"deleted_choices"`
+	AddedChoices   []string `json:"added_choices"`
+	EditedChoices  []struct {
+		ID         int    `json:"id"`
+		ChoiceName string `json:"choice_name"`
+	} `json:"edited_choices"`
+	UserID uuid.UUID `json:"-"`
 }
 
 type VoteRequest struct {
-	ChoiceIDs []int `json:"choice_id" validate:"required"`
+	VoteChoiceIDs   []int `json:"vote_choice_id"`
+	UnvoteChoiceIDs []int `json:"unvote_choice_id"`
 }
