# backend/pkg/routes/private_routes.go
@@ -41,7 +41,9 @@ func RegisterPrivateRoutes(app fiber.Router, db *gorm.DB, storage storage.Storag
 	userGroup.Delete("/:id", userHandler.DeleteUser)
 
 	// Poll
+	route.Get("/polls", pollHandler.GetMyPolls)
 	route.Post("/polls", pollHandler.CreatePoll)
 	route.Patch("/polls/:room_id", pollHandler.PatchPoll)
 	route.Post("/polls/:room_id/reset", pollHandler.ResetPoll)
+	route.Delete("/polls/:room_id", pollHandler.DeletePoll)
 }
